specs/blueprints/errors/parsing/missing_element_for_continuation.eno
# Parsing a line continuation without any prior element

-- input
| continuation
-- input

## ParseError

-- text
Line 1 contains a line continuation without a continuable element being specified before.
-- text

-- snippet
   Line | Content
 >    1 | | continuation
-- snippet

selection: [0,0] => [0,14]